Input and submit login-page not responsive, fixed

--- a/css/login-page.css
+++ b/css/login-page.css
@@ -35,6 +35,12 @@
 	border-radius: 1000px;
 }
 
+.wrapper-login {
+	/*display: flex;*/
+	/*flex-direction: column;*/
+	/*justify-content: center;*/
+	/*align-items: center;*/
+}
 .input-login {
 	border: 1px solid black;
 	margin: 5px 0;
@@ -49,9 +55,10 @@
 }
 
 .login-submit {
-	margin: 5px 0;
-	padding: 3px 8px;
+	/*margin: 5px 0;*/
+	/*padding: 3px 8px;*/
 	border: none;
+	width: 180px;
 	height: 30px;
 	background-color: rgba(81, 202, 188, 0.8);
 	font-size: 16px;
@@ -82,9 +89,12 @@
 		width: 60%;
 		height: 60%;
 	}
+	.wrapper-form {
+		width: 60%;
+	}
 	.input-login {
-		width: 50%;
-		height: 15%;
+		width: 100%;
+		height: 23%;
 		font-size: 80%;
 		/* margin: 10px 0; */
 	}
@@ -93,7 +103,8 @@
 		/* margin: 0 0; */
 	}
 	.login-submit {
-		height: 15%;
+		height: 23%;
 		font-size: 80%;
+		width: 100%;
 	}
 }
