--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ body {
 	justify-content: center;
 	background-color: rgba(81, 202, 188, 0.6);
 	width: 100%;
-	padding: 10px 0 10px 0;
+	padding: 15px 25px;
 	font-size: 16px;
 	color: white;
 	font-family: Arial, Helvetica, sans-serif;
@@ -34,7 +34,6 @@ body {
 	text-align: justify;
 	-moz-text-align-last: center;
 	text-align-last: center;
-	padding: 28px;
 }
 
 .danger {
@@ -43,7 +42,7 @@ body {
 	justify-content: center;
 	background-color: rgba(255, 51, 51, 0.9);
 	width: 100%;
-	padding: 10px 0 10px 0;
+	padding: 15px 25px;
 	font-size: 16px;
 	color: white;
 	font-family: Arial, Helvetica, sans-serif;
@@ -51,7 +50,6 @@ body {
 	text-align: justify;
 	-moz-text-align-last: center;
 	text-align-last: center;
-	padding: 28px;
 }
 
 .title-msg {
